# deprecated-lame-mirror

./: .cvsignore  .gitignore  API  ChangeLog  ChangeLog.header  CodingStyle.c  DEFINES  HACKING  INSTALL  LICENSE  Lame.vbs  Makefile  Makefile.B32  Makefile.DJGPP  Makefile.MSVC  Makefile.am  Makefile.am.global  Makefile.in  Makefile.in.old  Makefile.unix  PRESETS.draft  README  README.B32  README.DJGPP  README.Debian  README.WINGTK  STYLEGUIDE  TODO  USAGE  VbrTag.c  VbrTag.h  acconfig.h  acinclude.m4  aclocal.m4  amiga_mpega.c  auenc  bitstream.c  bitstream.h  brhist.c  brhist.h  (+82 more)
ACM/: ACM.cpp  ACM.dsw  ACM.h  ACMStream.cpp  ACMStream.h  AEncodeProperties.cpp  AEncodeProperties.h  DecodeStream.cpp  DecodeStream.h  LameACM.inf  Makefile.am  Makefile.in  TODO  acm.rc  adebug.h  lameACM.def  lameACM.dsp  lameACM_vc6.dsp  lame_acm.xml  main.cpp  readme.txt  resource.h
ACM/ADbg/: ADbg.cpp  ADbg.dsp  ADbg.h  Makefile.am  Makefile.in
ACM/ddk/: Makefile.am  Makefile.in
ACM/tinyxml/: Makefile.am  Makefile.in  Makefile.tinyxml  readme.txt  tinyxml.cpp  tinyxml.dsp  tinyxml.h  tinyxmlparser.cpp  xmltest.cpp
Dll/: BladeMP3EncDLL.c  BladeMP3EncDLL.def  BladeMP3EncDLL.h  Example.cpp  Example.dsp  Example.dsw  Example_vc6.dsw  LameDLLInterface.htm  LameDll_vc6.dsp  LameDll_vc8.vcproj  MP3EncDll.dsp  MP3EncDll.dsw  MP3export.pas  Makefile.am  Makefile.in  Makefile.mingw32
analyzer/: .cvsignore  Makefile.in  Makefile.in.old  README.Win32  gtkanal.c  mp3x.c  mp3x.dsw
debian/: Makefile.am  Makefile.in  changelog  control  copyright  cron.d.ex  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  ex.doc-base.package  files  init.d.ex  lame-dev.docs  lame-extras.files  lame.doc-base  lame.docs  lame.files  liblame0-dev.files  manpage.1.ex  manpage.sgml.ex  menu.ex  postinst.debhelper  postinst.ex  postrm.ex  preinst.ex  prerm.debhelper  prerm.ex  rules  substvars  watch.ex
doc/: Makefile.am  Makefile.in
doc/html/: Makefile.am  Makefile.in  about.html  abr.html  basic.html  cbr.html  contributors.html  detailed.html  examples.html  history.html  id3.html  index.html  modes.html  node5.html  node6.html  node7.html  presets.html  switchs.html  usage.html
doc/html/styles/: lame.css
doc/man/: Makefile.am  Makefile.in  lame.1
dshow/: .cvsignore  Encoder.cpp  Encoder.h  Makefile.am  Makefile.in  Mpegac.cpp  Mpegac.def  Mpegac.h  PropPage.cpp  PropPage.h  PropPage_adv.cpp  PropPage_adv.h  Property.rc  README  REG.CPP  REG.H  UIDS.H  aboutprp.cpp  aboutprp.h  dshow.dsp  dshow.dsw  iaudioprops.h  resource.h
frontend/: .cvsignore  Makefile.am  Makefile.in  Makefile.in.old  amiga_mpega.c  brhist.c  brhist.h  configure  configure.in  console.c  console.h  get_audio.c  get_audio.h  gpkplotting.c  gpkplotting.h  gtkanal.c  gtkanal.h  ieeefloat.c  ieeefloat.h  lame.dsp  lame.dsw  lame_main.c  lame_vc6.dsp  lame_vc7.vcproj  lame_vc8.vcproj  lametime.c  lametime.h  main.c  main.h  mp3rtp.c  mp3x.c  mp3x.dsp  mp3x.dsw  mp3x_vc6.dsp  mp3x_vc7.vcproj  mp3x_vc8.vcproj  parse.c  parse.h  portableio.c  portableio.h  (+5 more)
i386/: choose_table.nas  fft.nas  nasm.h
include/: Makefile.am  Makefile.in  id3tag.h  lame.def  lame.h  libmp3lame.sym
libmp3lame/: .cvsignore  .indent.pro  Makefile.am  Makefile.in  Makefile.in.old  VbrTag.c  VbrTag.h  amiga_mpega.c  bitstream.c  bitstream.h  debugscalefac.c  encoder.c  encoder.h  fft.c  fft.h  gain_analysis.c  gain_analysis.h  id3tag.c  id3tag.h  l3side.h  lame-analysis.h  lame.c  lame.rc  lame_global_flags.h  libmp3lame.dsp  libmp3lame.pc.in  libmp3lame_dll_vc6.dsp  libmp3lame_vc6.dsp  libmp3lame_vc8.vcproj  machine.h  mpglib_interface.c  newmdct.c  newmdct.h  pcm.c  pcm.h  presets.c  psymodel.c  psymodel.h  quantize.c  quantize.h  (+23 more)
libmp3lame/i386/: .cvsignore  Makefile.am  Makefile.in  choose_table.nas  cpu_feat.nas  cpua.nas  fft3dn.nas  fftsse.nas  ffttbl.nas  nasm.h  quantSSE.nas  scalar.nas  ssesub.c
libmp3lame/ppc/: Makefile.am  Makefile.in  configMacOS.h  count_bits.c  fft_apple_veclib.c  fft_apple_veclib.h  ixmax.s
libmp3lame/vector/: Makefile.am  Makefile.in  lame_intrin.h  xmm_quantize_sub.c
libmp3lame/x86_64/: Makefile.am  Makefile.in  quantize_sub.c
logo/: logoERGB.ai  logoEncodedRGB.ai  logoRGB.ai  logoRGB.eps  logoe.ai  logoe.eps  logofull.ai  logofull.eps  logomini.ai  logomini.eps
mac/: Makefile.am  Makefile.in  Precompile_Common.h
macosx/: Makefile.am  Makefile.in
macosx/English.lproj/: Makefile.am  Makefile.in
macosx/LAME.xcodeproj/: Makefile.am  Makefile.in
misc/: Lame.vbs  Makefile.am  Makefile.in  abx.c  ath.c  lame4dos.bat  lameGUI.html  mk_mp3.sh  mugeco.sh  scalartest.c
mp3x/: Makefile.in  README.Win32  aclocal.m4  config.status  configure  configure.in  gtkanal.c  mp3x.c  mp3x.dsp
mpglib/: .cvsignore  Makefile.am  Makefile.in  README  common.c  common.h  configure  configure.in  dct64_i386.c  dct64_i386.h  decode_i386.c  decode_i386.h  huffman.h  interface.c  interface.h  l2tables.h  layer1.c  layer1.h  layer2.c  layer2.h  layer3.c  layer3.h  main.c  mpg123.h  mpglib.dsp  mpglib.h  mpglib_vc6.dsp  mpglib_vc8.vcproj  tabinit.c  tabinit.h
test/: CBRABR.op  VBR.op  lame_test.cpp  lametest.py  nores.op
vc_solution/: Makefile.am  Makefile.in  arch_sse2.vsprops  vc9_lame.sln  vc9_lame_acm.vcproj  vc9_lame_acm_adbg.vcproj  vc9_lame_acm_tinyxml.vcproj  vc9_lame_dll.vcproj  vc9_lame_dll_example.vcproj  vc9_lame_dshow.vcproj  vc9_lame_lame.vcproj  vc9_lame_mp3rtp.vcproj  vc9_lame_mp3x.vcproj  vc9_libmp3lame.vcproj  vc9_libmp3lame_dll.vcproj  vc9_mpglib.vcproj
